# cando

./: .env.example  CLAUDE.md  DOCUMENTATION.md  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  auth.py  cando.db  db.py  main.py  populate.py  pyproject.toml  seed_dev.py
backend/tests/: conftest.py  test_auctions.py  test_auth.py  test_concepts.py  test_follows.py  test_offers.py  test_populate.py  test_users.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  constants.js  index.css  styles.js
frontend/src/components/: AuctionPage.jsx  Badge.jsx  Cards.jsx  CoinIcon.jsx  ConceptDetailModal.jsx  LandingPage.jsx  MarketplacePage.jsx  Modal.jsx  NotifDropdown.jsx  ProfilePage.jsx  UserPublicProfile.jsx  UserSearch.jsx
frontend/src/components/__tests__/: Badge.test.jsx  CoinAmount.test.jsx
frontend/src/hooks/: useIsMobile.js
